dev/tests/cases/neg/28_weave_type_int_to_str.tv
df shout(s: str) -> str { return str_concat(s, "!"); }
df main() -> void {
    set v: i64 = 5;
    echo!(v ~> shout);
}
